crates/iroha_telemetry_derive/tests/ui_fail/metric_name_with_space.rs
use iroha_telemetry_derive::metrics;

#[metrics("metric with space")]
fn execute(state: &StateTransaction) -> Result<(), ()> {
    let _ = state;
    Ok(())
}

fn main() {}
